# lightweight_vector_database_showcase_applications

lightweight_vector_database/: .gitignore  CMakeLists.txt  README.md
lightweight_vector_database/showcase_apps/: CMakeLists.txt
lightweight_vector_database/showcase_apps/image_similarity_search_python/: CMakeLists.txt
lightweight_vector_database/src/: bindings.cpp  database.h  hnsw.h  sq.h
lightweight_vector_database/test/: test.cpp  test_delete.cpp  test_sq.cpp  test_update.cpp
showcase_apps/image_similarity_search_python/: README.md  embedder.py  main.py  requirements.txt
